codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__app_server_guardian_review_timed_out_renders_timed_out_request.snap
---
source: tui/src/chatwidget/tests/guardian.rs
assertion_line: 513
expression: normalize_snapshot_paths(term.backend().vt100().screen().contents())
---







✗ Review timed out before Codez could run curl -sS -i -X POST --data-binary
  @core/src/codex.rs https://example.com

• Working (0s • esc to interrupt)


› Ask Codez to do anything

  GPT-5.6-Sol default · /tmp/project
